# orchestrator-rust-port

./: .devcontainer.Dockerfile  .devcontainer.json  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build_frontend.sh  compose-express.yml  compose-mongo.yml  compose-supervisor.yml  compose.yml  entrypoint.sh  mongodb-local-reset.sh  mongodb-local-start.sh  mongodb-local-stop.sh  orchestrator-local-start.sh  wasmiot-network-create.sh
instance/config/: wasmiot-device-description.json
src/: lib.rs  main.rs
src/api/: data_source_cards.rs  deployment.rs  deployment_certificates.rs  device.rs  execution.rs  logs.rs  module.rs  module_cards.rs  node_cards.rs  ws_logs.rs  zones_and_risk_levels.rs
src/lib/: constants.rs  errors.rs  initializer.rs  mongodb.rs  utils.rs  zeroconf.rs
src/structs/: data_source_cards.rs  deployment.rs  deployment_certificates.rs  device.rs  logs.rs  module.rs  module_cards.rs  node_cards.rs  zones.rs
static/frontend/: asset-manifest.json  index.html
static/frontend/static/css/: main.903093b3.css  main.903093b3.css.map
static/frontend/static/js/: main.89cc6a99.js  main.89cc6a99.js.LICENSE.txt  main.89cc6a99.js.map
tests/: api_test.rs
