[workspace]
resolver = "2"

[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.10.2"
anyhow = "1.0.98"
bson = {version="2.15.0", features=["chrono-0_4"]}
chrono = {version="0.4.41", features=["serde"]}
const_format = "0.2.34"
dotenv = "0.15.0"
env_logger = "0.11"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
local-ip-address = "0.6.5"
log = "0.4"
mime_guess = "2.0.5"
mongodb = "3.2.3"
once_cell = "1.21.3"
parking_lot = "0.12"
reqwest = {version="0.12.20", features=["json", "multipart", "rustls-tls"]}
serde = "1.0.219"
serde_json = "1.0.140"
sysinfo = "0.35.2"
tokio = {version="1.44.2",  features = ["fs", "macros", "rt-multi-thread"]}
tokio-tungstenite = "0.24"
tungstenite = { version = "0.24", features = ["handshake"] }
uuid = {version="1.17.0",features=["v4"]}
wasmparser = "0.236.1"
wasmtime = "35.0.0"
zeroconf = "0.15.1"

[features]

[profile.release]
strip = true
